/*
 * $Id: ChangeLog,v 1.39 2002/11/03 15:17:44 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-11-03 10:12 UTC -0500 Paul Tucker <ptucker@sympatico.ca>
   * env/bccwin32.mak
   * make_b32.bat
   * make_vc.bat
   * makefile.bc
   * makefile.nt
   * makefile.vc
     * changes so both BCC and VC versions can co-exist.

2002-11-02 18:00 UTC -0500 Paul Tucker <ptucker@sympatico.ca>
   * source/wincore.prg
   * source/_winbmp.C
   * source/_winclpb.C
   * source/_windraw.C
   * source/_wingdi.C
   * source/_wininet.C
   * source/_winkbrd.C
   * source/_winmeta.C
   * source/_winmisc.C
   * source/_winmsg.C
   * source/_winreg.C
   * source/_winrgn.C
   * source/_winsock.C
   * source/_wintree.C
   + makefile.vc
   + makefile.nt
   + make_vc.bat
     ! changes to allow compilation by MSVC.
   NOTE - I have no idea at this point if the .lib is useable.

2002-10-21 02:47 UTC +0100 Francesco Saverio Giudice <info@fsgiudice.com>
   + include\classex.ch
     + Added PROPERTY class extension


2002-10-18 07:30 UCT+1000 AJ Wos <andrwos@aust1.net>
   * _winwnd.c
     * Corrected ignored parameter to AllowSetForgroundWindow()
     * Fixed bug in closing the DLL before function call in
       AllowSetForegroundWindow().
   * _windlg.c
     * converted GetListBoxInfo() to a dynamic DLL call.

   ( please make sure that the changelog is always updated - there
     is no entry here that somebody has converted some API functions,
     to dynamic DLL calls - which other functions have been changed ? )

2002-10-14 03:41 UTC +0100 Francesco Saverio Giudice <info@fsgiudice.com>
   + _ToolTip.c
     + Support for tooltips
       SETTOOLTIP()

2002-10-09 22:00 UTC -0300 Luiz Rafael Culik <culikr@uol.com.br>
   * _winmous.c
     _winscrlb.c
     _winmenu.c
     * Conditional compilation added to