@@ -26,18 +26,18 @@ hbcflags =-n -w -es2 -i$(WH_DIR)\include;$(HBR_DIR)\include
 
 #-- C COMPILER ----------
 CC       =cl
-CFLAGS   =-TP -Fpvc -W3 -G6 -Ox -GA -c -DHB_API_MACROS -DHB_STACK_MACROS -DHB_OS_WIN_32 -DHB_FM_STATISTICS_OFF -I$(WH_DIR)\include -I$(HBR_DIR)\include
+CFLAGS   =-TP -W3 -Ox -GA -nologo -c -DHB_API_MACROS -DHB_STACK_MACROS -DHB_OS_WIN_32 -DHB_FM_STATISTICS_OFF -I$(WH_DIR)\include -I$(HBR_DIR)\include
 
 #-- RESOURCE COMPILER ---
 rc       =rc
-rCFLAGS  =-r
+rcflags  =-r
 
 .SUFFIXES: .prg .c
 
 .c.obj:
-   $(CC) $(CFLAGS) -Fo$(OBJ_DIR)\ $<
+ $(CC) $(CFLAGS) -Fo$(OBJ_DIR)\ $<
 
-WHAT32LIB  = $(LIBDIR)\what32.lib
+WHAT32LIB= $(LIBDIR)\what32.lib
 
 LIBLIST  = $(WHAT32LIB)
 
@@ -52,20 +52,9 @@ LIBLIST  = $(WHAT32LIB)
 
 {$(SRCDIR)}.prg{$(OBJ_DIR)}.obj:
    $(hbc) $(hbcflags) -o$(OBJ_DIR)\ $<
-   $(MAKE) -nologo /$(MK_FLAGS) /f$(MK_FILE) $(WHAT32LIB)2
+   $(MAKE) -nologo /$(MK_FLAGS)f$(MK_FILE) $(WHAT32LIB)2
 
-WHAT32OBJ  = \
-    $(OBJ_DIR)\Debug.obj \
-    $(OBJ_DIR)\ErrorSys.obj \
-    $(OBJ_DIR)\WhatUtil.obj \
-    $(OBJ_DIR)\WinCDlg.obj \
-    $(OBJ_DIR)\WinComm.obj \
-    $(OBJ_DIR)\WinCore.obj \
-    $(OBJ_DIR)\WinIni.obj \
-    $(OBJ_DIR)\WinRBar.obj \
-    $(OBJ_DIR)\WinTBar.obj \
-    $(OBJ_DIR)\WinTabs.obj \
-    \
+WHAT32OBJ = \
     $(OBJ_DIR)\_winbmp.obj \
     $(OBJ_DIR)\_winbrsh.obj \
     $(OBJ_DIR)\_wincall.obj \
@@ -110,8 +99,18 @@ WHAT32OBJ  = \
     $(OBJ_DIR)\_wintext.obj \
     $(OBJ_DIR)\_winTree.obj \
     $(OBJ_DIR)\_winview.obj \
-    $(OBJ_DIR)\_winwnd.obj
-
+    $(OBJ_DIR)\_winwnd.obj \
+    \
+    $(OBJ_DIR)\Debug.obj \
+    $(OBJ_DIR)\ErrorSys.obj \
+    $(OBJ_DIR)\WhatUtil.obj \
+    $(OBJ_DIR)\WinCDlg.obj \
+    $(OBJ_DIR)\WinComm.obj \
+    $(OBJ_DIR)\WinCore.obj \
+    $(OBJ_DIR)\WinIni.obj \
+    $(OBJ_DIR)\WinRBar.obj \
+    $(OBJ_DIR)\WinTBar.obj \
+    $(OBJ_DIR)\WinTabs.obj
 
 !if ( "$(MK_FLAGS)"=="A" )
 
@@ -134,4 +133,4 @@ all: \
 $(WHAT32LIB) : $(WHAT32OBJ)
    lib /out:$@ $**
 
-$(WHAT32LIB)2  : $(WHAT32C)
+$(WHAT32LIB)2  : $(WHAT32OBJ)
